[gd_scene load_steps=5 format=3 uid="uid://bqqug1imgomcw"]

[ext_resource type="Script" path="res://ui/popups/game_over_panel/game_over_panel.gd" id="1_pfmn8"]
[ext_resource type="Theme" uid="uid://dfureb8blyilx" path="res://ui/themes/default_theme.tres" id="4_hr3yf"]
[ext_resource type="PackedScene" uid="uid://cy8otjo413bqb" path="res://ui/elements/button.tscn" id="5_mkuuu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ky7e"]
bg_color = Color(0.00392157, 0.109804, 0.152941, 1)

[node name="GameOverPanel" type="Panel"]
z_index = 99
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4ky7e")
script = ExtResource("1_pfmn8")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 11
theme_override_constants/margin_bottom = 12

[node name="Viewport" type="Control" parent="Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/Viewport"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.0
offset_right = 98.0
offset_bottom = 36.0
grow_horizontal = 2
theme = ExtResource("4_hr3yf")
theme_override_font_sizes/font_size = 36
text = "GAME OVER"
horizontal_alignment = 1

[node name="Text" type="Label" parent="Margin/Viewport"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -102.0
offset_top = 38.0
offset_right = 102.0
offset_bottom = 61.0
grow_horizontal = 2
theme = ExtResource("4_hr3yf")
theme_override_font_sizes/font_size = 14
text = "You didn't kill all the enemies"
horizontal_alignment = 1

[node name="HighScore" type="Control" parent="Margin/Viewport"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -156.0
offset_top = 72.0
offset_right = 74.0
offset_bottom = 95.976
grow_horizontal = 2

[node name="HighScoreTextLabel" type="Label" parent="Margin/Viewport/HighScore"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -15.0
offset_right = 91.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_hr3yf")
theme_override_font_sizes/font_size = 25
text = "High Score:"
horizontal_alignment = 2

[node name="HighScoreLabel" type="Label" parent="Margin/Viewport/HighScore"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -21.5
offset_right = 34.0
offset_bottom = 13.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 25

[node name="Stats" type="Control" parent="Margin/Viewport"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.0
offset_top = -48.5
offset_right = 221.0
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2

[node name="Levels" type="Control" parent="Margin/Viewport/Stats"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Margin/Viewport/Stats/Levels"]
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("4_hr3yf")
theme_override_font_sizes/font_size = 14
text = "Levels Completed  ................................................................................"

[node name="LevelsCompletedLabel" type="Label" parent="Margin/Viewport/Stats/Levels"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_hr3yf")
theme_override_font_sizes/font_size = 14
text = "0"
horizontal_alignment = 2

[node name="Points" type="Control" parent="Margin/Viewport/Stats"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 23.0
offset_bottom = 53.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Margin/Viewport/Stats/Points"]
texture_filter = 1
offset_right = 393.0
offset_bottom = 23.0
theme = ExtResource("4_hr3yf")
theme_override_font_sizes/font_size = 14
text = "Total Points  ........................................................................................."

[node name="TotalPointsLabel" type="Label" parent="Margin/Viewport/Stats/Points"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_hr3yf")
theme_override_font_sizes/font_size = 14
text = "0"
horizontal_alignment = 2

[node name="EnemiesKilled" type="Control" parent="Margin/Viewport/Stats"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 47.0
offset_bottom = 77.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Margin/Viewport/Stats/EnemiesKilled"]
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("4_hr3yf")
theme_override_font_sizes/font_size = 14
text = "Enemies Killed  ....................................................................................."

[node name="EnemiesKilledLabel" type="Label" parent="Margin/Viewport/Stats/EnemiesKilled"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_hr3yf")
theme_override_font_sizes/font_size = 14
text = "0"
horizontal_alignment = 2

[node name="Ricochets" type="Control" parent="Margin/Viewport/Stats"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 71.0
offset_bottom = 101.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Margin/Viewport/Stats/Ricochets"]
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("4_hr3yf")
theme_override_font_sizes/font_size = 14
text = "Ricochets ..............................................................................................."

[node name="RicochetsLabel" type="Label" parent="Margin/Viewport/Stats/Ricochets"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_hr3yf")
theme_override_font_sizes/font_size = 14
text = "0"
horizontal_alignment = 2

[node name="Buttons" type="Control" parent="Margin/Viewport"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -65.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0

[node name="NewRunButton" parent="Margin/Viewport/Buttons" instance=ExtResource("5_mkuuu")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.0
offset_right = 58.0
grow_horizontal = 2
text = "NEW RUN"

[node name="QuitButton" parent="Margin/Viewport/Buttons" instance=ExtResource("5_mkuuu")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.5
offset_top = -24.0
offset_right = 57.5
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
text = "QUIT"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Margin/Viewport/Buttons/NewRunButton" to="." method="_on_new_run_button_pressed"]
[connection signal="pressed" from="Margin/Viewport/Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
